[cartier]feat.태블릿버전1

--- a/pages/index.html
+++ b/pages/index.html
@@ -185,7 +185,7 @@
                                 </li>
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/watches/all-collections/tank/%ED%83%B1%ED%81%AC-%EB%A3%A8%EC%9D%B4-%EA%B9%8C%EB%A5%B4%EB%9D%A0%EC%97%90-%EC%9B%8C%EC%B9%98-CRW1529856.html" class="sec-g__link">
-                                        <img src="../resources/images/component/common/tankwatch1.avif" class="sec-g__img" alt="Tank Louis Cartier Watch" />
+                                        <img src="../resources/images/component/common/tankwatch1.avif" class="sec-g__img2" alt="Tank Louis Cartier Watch" />
                                     </a>
                                 </li>
                                 <li>
