[cartier]feat.헤더푸터추가

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
                 <div class="inner">
                     <h1 id="logo">
                         <a href="#">
-                            <img src="../resources/images/component/common/1-CAR_Avatar_icon.svg" alt="" />
+                            <img src="../resources/images/component/common/cartierlogo.png" alt="cartier logo" />
                             <span>logo</span>
                         </a>
                     </h1>
@@ -46,40 +46,49 @@
                         <ul class="gnb__depth1">
                             <li>
                                 <a href="#">
-                                    <span>menu1</span>
+                                    <span>HIGH JEWELRY</span>
                                 </a>
                                 <ul class="gnb__depth2">
-                                    <li><a href="#">menu1-1</a></li>
-                                    <li><a href="#">menu1-2</a></li>
-                                    <li><a href="#">menu1-3</a></li>
-                                    <li><a href="#">menu1-4</a></li>
+                                    <li><a href="#">ALL CREATIONS</a></li>
+                                    <li><a href="#">LATEST COLLECTIONS</a></li>
+                                    <li><a href="#">KNOW-HOW</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#"><span>menu2</span></a>
+                                <a href="#"><span>JEWERLY</span></a>
                                 <ul class="gnb__depth2">
-                                    <li><a href="#">menu2-1</a></li>
-                                    <li><a href="#">menu2-2</a></li>
-                                    <li><a href="#">menu2-3</a></li>
-                                    <li><a href="#">menu2-4</a></li>
+                                    <li><a href="#">ALL COLLECTIONS</a></li>
+                                    <li><a href="#">BRACELETS</a></li>
+                                    <li><a href="#">RINGS</a></li>
+                                    <li><a href="#">NECKLACES</a></li>
+                                    <li><a href="#">EARINGS</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#"><span>menu3</span></a>
+                                <a href="#"><span>WATCHS</span></a>
                                 <ul class="gnb__depth2">
-                                    <li><a href="#">menu3-1</a></li>
-                                    <li><a href="#">menu3-2</a></li>
-                                    <li><a href="#">menu3-3</a></li>
-                                    <li><a href="#">menu3-4</a></li>
+                                    <li><a href="#">COLLECTIONS</a></li>
+                                    <li><a href="#">CHOOSE YOUR WATCH</a></li>
+                                    <li><a href="#">CARTIER WATCHMAKING</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#"><span>menu4</span></a>
+                                <a href="#"><span>BAG AND ACCESSORIES</span></a>
                                 <ul class="gnb__depth2">
-                                    <li><a href="#">menu4-1</a></li>
-                                    <li><a href="#">menu4-2</a></li>
-                                    <li><a href="#">menu4-3</a></li>
-                                    <li><a href="#">menu4-4</a></li>
+                                    <li><a href="#">BAGS</a></li>
+                                    <li><a href="#">COLLECTIONS</a></li>
+                                    <li><a href="#">ACCESSORIES</a></li>
+                                    <li><a href="#">SUNGLASSES</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>FRAGRANCES</span></a>
+                                <ul class="gnb__depth2">
+                                    <li><a href="#">FRAGRANCES</a></li>
+                                    <li><a href="#">HIGH PERFUMERY</a></li>
+                                    <li><a href="#">SETS</a></li>
+                                    <li><a href="#">SCENTED HOME</a></li>
+                                    <li><a href="#">CHOOSE YOUR FRAGRANCES</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -89,13 +98,14 @@
                         <div class="lang">
                             <button class="lang__btn">kor</button>
                             <ul class="lang__lst">
-                                <li>kor</li>
-                                <li>eng</li>
+                                <li>KOR</li>
+                                <li>ENG</li>
+                                <li>CHN</li>
                             </ul>
                         </div>
-                        <button class="search">
+                        <!-- <button class="search">
                             <span class="blind">검색</span>
-                        </button>
+                        </button> -->
                         <button class="all-menu">
                             <span class="blind">전체메뉴</span>
                         </button>
@@ -106,40 +116,49 @@
                     <ul class="gnb__depth1">
                         <li>
                             <a href="#">
-                                <span>menu1</span>
+                                <span>HIGH JEWELRY</span>
                             </a>
                             <ul class="gnb__depth2">
-                                <li><a href="#">menu1-1</a></li>
-                                <li><a href="#">menu1-2</a></li>
-                                <li><a href="#">menu1-3</a></li>
-                                <li><a href="#">menu1-4</a></li>
+                                <li><a href="#">ALL CREATIONS</a></li>
+                                <li><a href="#">LATEST COLLECTIONS</a></li>
+                                <li><a href="#">KNOW-HOW</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><span>menu2</span></a>
+                            <a href="#"><span>JEWERLY</span></a>
                             <ul class="gnb__depth2">
-                                <li><a href="#">menu2-1</a></li>
-                                <li><a href="#">menu2-2</a></li>
-                                <li><a href="#">menu2-3</a></li>
-                                <li><a href="#">menu2-4</a></li>
+                                <li><a href="#">ALL COLLECTIONS</a></li>
+                                <li><a href="#">BRACELETS</a></li>
+                                <li><a href="#">RINGS</a></li>
+                                <li><a href="#">NECKLACES</a></li>
+                                <li><a href="#">EARINGS</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><span>menu3</span></a>
+                            <a href="#"><span>WATCHS</span></a>
                             <ul class="gnb__depth2">
-                                <li><a href="#">menu3-1</a></li>
-                                <li><a href="#">menu3-2</a></li>
-                                <li><a href="#">menu3-3</a></li>
-                                <li><a href="#">menu3-4</a></li>
+                                <li><a href="#">COLLECTIONS</a></li>
+                                <li><a href="#">CHOOSE YOUR WATCH</a></li>
+                                <li><a href="#">CARTIER WATCHMAKING</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><span>menu4</span></a>
+                            <a href="#"><span>BAG AND ACCESSORIES</span></a>
                             <ul class="gnb__depth2">
-                                <li><a href="#">menu4-1</a></li>
-                                <li><a href="#">menu4-2</a></li>
-                                <li><a href="#">menu4-3</a></li>
-                                <li><a href="#">menu4-4</a></li>
+                                <li><a href="#">BAGS</a></li>
+                                <li><a href="#">COLLECTIONS</a></li>
+                                <li><a href="#">ACCESSORIES</a></li>
+                                <li><a href="#">SUNGLASSES</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>FRAGRANCES</span></a>
+                            <ul class="gnb__depth2">
+                                <li><a href="#">FRAGRANCES</a></li>
+                                <li><a href="#">HIGH PERFUMERY</a></li>
+                                <li><a href="#">SETS</a></li>
+                                <li><a href="#">SCENTED HOME</a></li>
+                                <li><a href="#">CHOOSE YOUR FRAGRANCES</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -157,12 +176,15 @@
                         <h2 class="sec-g__tit">Trinity</h2>
                         <div class="sec-g__cont">
                             <img src="../resources/images/component/common/TRINITY_STORIES.avif" class="sec-g__img" alt="Trinity" />
-                            <strong class="sec-g__desc"
-                                >100th Anniversary of the
-                                <br />
-                                Birth of an Icon</strong
-                            >
-                            <a href="https://www.cartier.com/ko-kr/jewellery/collections/trinity/" class="sec-g__more">SHOP THE COLLECTION</a>
+
+                            <div>
+                                <strong class="sec-g__desc"
+                                    >100th Anniversary of the
+                                    <br />
+                                    Birth of an Icon</strong
+                                >
+                                <a href="https://www.cartier.com/ko-kr/jewellery/collections/trinity/" class="sec-g__more">SHOP THE COLLECTION</a>
+                            </div>
                         </div>
                     </div>
                 </section>
