--- a/pages/index.html
+++ b/pages/index.html
@@ -295,7 +295,7 @@
                                 </li>
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/%ED%95%98%EC%9D%B4-%EC%A3%BC%EC%96%BC%EB%A6%AC/%EC%83%88%EB%A1%9C%EC%9A%B4-%EC%BB%AC%EB%A0%89%EC%85%98/%EA%B9%8C%EB%A5%B4%EB%9D%A0%EC%97%90-%EC%94%A8%EC%A0%AC-%EC%8D%BD%EC%93%B0/" class="sec-g__link">
-                                        <img src="../resources/images/component/common/Cartier Seegem Sensu Collection.jfif" class="sec-g__img" alt="Cartier Seegem Sensu Collection" />
+                                        <img src="../resources/images/component/common/Cartier Seegem Sensu Collection.jfif" class="sec-g__img4" alt="Cartier Seegem Sensu Collection" />
                                         <div class="txt-area">
                                             <strong class="title">Cartier Seegem Sensu Collection</strong>
                                             <p class="desc">
