[cartier]배경영상추가

--- a/pages/index.html
+++ b/pages/index.html
@@ -168,6 +168,15 @@
             </header>
             <div class="intro"><div class="inner">Cartier</div></div>
             <main id="container">
+                <!-- 배경 비디오 섹션 -->
+                <div class="video-container">
+                    <video autoplay muted loop>
+                        <source src="../resources/images/component/common/Trinity 100 years of an icon.mp4" type="video/mp4" />
+                        <!-- 브라우저가 지원하지 않는 경우를 대비한 메시지 -->
+                        동영상이 지원되지 않는 브라우저입니다.
+                    </video>
+                </div>
+
                 <!-- trinity 섹션 -->
                 <section class="sec-g sec-cartier">
                     <div class="inner">
