--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../resources/css/pattern_css.css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script defer src="../resources/js/include.js"></script>
@@ -34,6 +36,11 @@
             <a href="#container">본문 바로가기</a>
         </div>
         <div id="wrap">
+            <!-- 로딩 화면 -->
+            <!-- <div id="loading">
+                <div class="loader"></div>
+            </div> -->
+
             <header id="header" class="">
                 <div class="inner">
                     <h1 id="logo">
@@ -171,7 +178,7 @@
                 <!-- 배경 비디오 섹션 -->
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="../resources/images/component/common/Trinity 100 years of an icon.mp4" type="video/mp4" />
+                        <source src="../resources/images/component/common/Cartier and Gong Li Journey into High Jewelry.mp4" type="video/mp4" />
                         <!-- 브라우저가 지원하지 않는 경우를 대비한 메시지 -->
                         동영상이 지원되지 않는 브라우저입니다.
                     </video>
