--- a/pages/index.html
+++ b/pages/index.html
@@ -178,7 +178,7 @@
                 <!-- 배경 비디오 섹션 -->
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="../resources/images/component/common/Cartier and Gong Li Journey into High Jewelry.mp4" type="video/mp4" />
+                        <source src="../resources/images/component/common/cartiertrinityreal.mp4" type="video/mp4" />
                         <!-- 브라우저가 지원하지 않는 경우를 대비한 메시지 -->
                         동영상이 지원되지 않는 브라우저입니다.
                     </video>
@@ -189,7 +189,7 @@
                     <div class="inner">
                         <h2 class="sec-g__tit">Trinity</h2>
                         <div class="sec-g__cont">
-                            <img src="../resources/images/component/common/TRINITY_STORIES.avif" class="sec-g__img" alt="Trinity" />
+                            <img src="../resources/images/component/common/01_UPDATE_HEADER_TRINITY_1920x800.avif" class="sec-g__img" alt="Trinity" />
 
                             <div>
                                 <strong class="sec-g__desc"
