--- a/pages/index.html
+++ b/pages/index.html
@@ -191,7 +191,7 @@
                         <div class="sec-g__cont">
                             <img src="../resources/images/component/common/01_UPDATE_HEADER_TRINITY_1920x800.avif" class="sec-g__img" alt="Trinity" />
 
-                            <div>
+                            <div class="sec-g__in">
                                 <strong class="sec-g__desc"
                                     >100th Anniversary of the
                                     <br />
