[cartier]feat.product마우스오버일단 성공선생님확인필요 bestcollection쪽 마우스오버일단실패이것도선생님한테여쭤봐야됨

--- a/pages/index.html
+++ b/pages/index.html
@@ -218,21 +218,41 @@
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/%EC%A3%BC%EC%96%BC%EB%A6%AC/%EB%A7%81/love/love-%EB%A7%81-CRB4084800.html" class="sec-g__link">
                                         <img src="../resources/images/component/common/lovering.avif" class="sec-g__img" alt="LOVE ring" />
+                                        <div class="sec-g__hover">
+                                            LOVE ring
+                                            <br />
+                                            ₩2,790,000
+                                        </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/watches/all-collections/tank/%ED%83%B1%ED%81%AC-%EB%A3%A8%EC%9D%B4-%EA%B9%8C%EB%A5%B4%EB%9D%A0%EC%97%90-%EC%9B%8C%EC%B9%98-CRW1529856.html" class="sec-g__link">
                                         <img src="../resources/images/component/common/tankwatch1.avif" class="sec-g__img2" alt="Tank Louis Cartier Watch" />
+                                        <div class="sec-g__hover">
+                                            Tank Louis Cartier Watch
+                                            <br />
+                                            ₩14,700,000
+                                        </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/%EC%A3%BC%EC%96%BC%EB%A6%AC/%EB%B8%8C%EB%A0%88%EC%9D%B4%EC%8A%AC%EB%A6%BF/%ED%8A%B8%EB%A6%AC%EB%8B%88%ED%8B%B0/%ED%8A%B8%EB%A6%AC%EB%8B%88%ED%8B%B0-%EB%B8%8C%EB%A0%88%EC%9D%B4%EC%8A%AC%EB%A6%BF-N6721317.html" class="sec-g__link">
                                         <img src="../resources/images/component/common/bracereal.avif" class="sec-g__img" alt="Trinity Bracelet" />
+                                        <div class="sec-g__hover">
+                                            Trinity Bracelet
+                                            <br />
+                                            ₩44,700,000
+                                        </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.cartier.com/ko-kr/%EC%8B%9C%EA%B3%84/%EC%BB%AC%EB%A0%89%EC%85%98/%EB%B2%A0%EB%88%84%EC%95%84/%EB%B2%A0%EB%88%84%EC%95%84-%EC%9B%8C%EC%B9%98-CRWJBA0031.html" class="sec-g__link">
                                         <img src="../resources/images/component/common/Benoit Watch.avif" class="sec-g__img" alt="Benoit Watch" />
+                                        <div class="sec-g__hover">
+                                            Benoit Watch
+                                            <br />
+                                            ₩26,600,000
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
